<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.example.android.rugbyscorecounter.MainActivity"
  android:background="@drawable/rygbyballtwo">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:orientation="horizontal">

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/team_a"
        android:textColor="#FF8A65"
        android:textSize="22sp" />

      <TextView
        android:id="@+id/team_a_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textColor="#000000"
        android:textSize="56sp" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussFiveForTeamA"
        android:text="@string/tryy" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussSevenForTeamA"
        android:text="@string/penalty_try" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussTwoForTeamA"
        android:text="@string/conversion_goal" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussThreeForTeamA"
        android:text="@string/penalty_goal" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussThreeForTeamA"
        android:text="@string/dropped_goal" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/team_b"
        android:textColor="#FF8A65"
        android:textSize="22sp" />

      <TextView
        android:id="@+id/team_b_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/zero"
        android:textColor="#000000"
        android:textSize="56sp" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussFiveForTeamB"
        android:text="@string/tryy" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussSevenForTeamB"
        android:text="@string/penalty_try" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussTwoForTeamB"
        android:text="@string/conversion_goal" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussThreeForTeamB"
        android:text="@string/penalty_goal" />

      <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="plussThreeForTeamB"
        android:text="@string/dropped_goal" />

    </LinearLayout>

  </LinearLayout>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:onClick="resetScore"
    android:text="@string/reset" />

</RelativeLayout>

